# cmff

./: README.md  config.py  main.py  pyproject.toml
analysis/: analyse_data.py  attention.py  bar_chart.py  diff_model.py  distribution.py  line_chart.py  line_chart1.py  paired_t_test.py  vis_attention.py  vis_distribution.py  vis_num_layer.py  vis_prediction copy.py  vis_prediction.py  vis_tsne.py  visualization.py
cmff/: config.py  lightning_data.py  lightning_model.py
cmff/analysis/: paired_t_test.py  plot_waveform.py  vis_distribution.py  vis_error_boxplot.py  vis_llm.py  vis_num_layer.py  vis_sample.py  vis_tsne.py  visualization.py
data_process/: analyse_data.py  data_convert.py  extract_audio_feature.py  extract_wav_multithread.py  parse_processed.py
datasets/: cache_dataset.py  check_video.py  cmff_cache.py  extract_face.py  extract_frames.py  fix_video_for_qwen.py  readme.md  split_av.py  utils.py
llm/: chatgpt_test.py  eval.py  gemini_test.py  prompts.py  qwen_online.py  qwen_transformers.py  qwen_vllm_test.py
llm/qwen_utils/: encoder.py  image_token_calculate.py  video_token_calculate.py
m1/: lightning_data.py  lightning_model.py
utils/: bandwidth_gpu.py  bandwidth_pcie.py  metrics.py  metricsTop.py  mlflow_utils.py  utils.py
