[project]
name = "msa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "insightface>=0.7.3",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1.post0",
    "mlflow>=3.1.0",
    "modelscope>=1.27.1",
    "onnxruntime-gpu>=1.22.0",
    "opencv-python>=4.11.0.86",
    "openai>=1.43.0",
    "pyctcdecode>=0.5.0",
    "pysocks>=1.7.1",
    "qwen-omni-utils>=0.0.8",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch==2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "torchcodec>=0.6.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.51.3-Qwen2.5-Omni-preview" }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[[tool.uv.index]]
name="pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
